--- a/index.html
+++ b/index.html
@@ -49,17 +49,18 @@
                 </div>
                 <div>
                     <span class="numero">13</span>
-                    <span class="rotulo">age/span>
+                    <span class="rotulo">age</span>
                 </div>
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus distinctio facilis, accusamus ad
+            <p class="col-wide">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus distinctio facilis,
+                accusamus ad
                 fugit sapiente non tempore laborum totam consequatur eos est ducimus cum suscipit tempora doloremque quo
                 nemo aspernatur.</p>
-            <img src="img/wolf1.jpg" alt="wolf1">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit ullam velit, sint optio exercitationem
+            <img class="imagem-1" src="img/wolf1.jpg" alt="wolf1">
+            <p class="destaque">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit ullam velit, sint optio exercitationem
                 voluptatem doloribus veritatis dignissimos adipisci facilis, eius neque quas quisquam quia harum sunt
                 fugiat nobis corrupti?</p>
-            <img src="img/wolf2.jpg" alt="wolf2">
+            <img class="imagem-2" src="img/wolf2.jpg" alt="wolf2">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tenetur unde est a explicabo eum
                 enim corporis cumque! Ipsa culpa ullam in iure eveniet sapiente saepe autem repellendus laborum esse.
             </p>
@@ -67,7 +68,7 @@
                 sunt consequuntur mollitia, voluptatum quasi voluptate magni eius nisi iure eveniet aperiam ut non est.
                 Iusto?</p>
 
-            <blockquote class="citacao">
+            <blockquote class="citacao col-wide">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, suscipit? Suscipit totam odit
                     obcaecati autem. Natus,.</p>
             </blockquote>
