--- a/index.html
+++ b/index.html
@@ -52,26 +52,28 @@
                     <span class="rotulo">age</span>
                 </div>
             </div>
-            <p class="col-wide">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus distinctio facilis,
-                accusamus ad
-                fugit sapiente non tempore laborum totam consequatur eos est ducimus cum suscipit tempora doloremque quo
-                nemo aspernatur.</p>
-            <img class="imagem-1" src="img/wolf1.jpg" alt="wolf1">
-            <p class="destaque">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit ullam velit, sint optio exercitationem
-                voluptatem doloribus veritatis dignissimos adipisci facilis, eius neque quas quisquam quia harum sunt
-                fugiat nobis corrupti?</p>
-            <img class="imagem-2" src="img/wolf2.jpg" alt="wolf2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tenetur unde est a explicabo eum
-                enim corporis cumque! Ipsa culpa ullam in iure eveniet sapiente saepe autem repellendus laborum esse.
-            </p>
-            <p>Impedit beatae nesciunt alias asperiores ducimus rerum eligendi sed quos molestiae incidunt sint quidem
-                sunt consequuntur mollitia, voluptatum quasi voluptate magni eius nisi iure eveniet aperiam ut non est.
-                Iusto?</p>
+            <p class="col-wide">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil
+                anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do
+                cão doméstico.</p>
 
-            <blockquote class="citacao col-wide">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, suscipit? Suscipit totam odit
-                    obcaecati autem. Natus,.</p>
-            </blockquote>
+            <img class="imagem-1" src="img/wolf1.jpg" alt="wolf1">
+
+            <p class="destaque">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil
+                anos atrás.[2] O sequenciamento de DNA e estudos.</p>
+
+            <img class="imagem-2" src="img/wolf2.jpg" alt="wolf2">
+
+            <p>O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a aumentar proporcionalmente com a
+                latitude, como previsto pela teoria de Christian Bergmann. Em geral, a altura, medida a partir dos
+                ombros, varia de 60 a 95 centímetros.</p>
+
+            <p>O peso varia geograficamente. Em média, os lobos europeus pesam 38,5 kg; os lobos da América do Norte, 36
+                kg; os lobos indianos e árabes, 25 kg.[7] Embora raros, lobos com mais de 77 kg foram encontrados no
+                Alasca, Canadá,[8] e na antiga União Soviética.</p>
+
+                <blockquote class="citacao col-wide">
+                    <p>“Há algo no uivar do lobo que tira um homem do aqui e agora e o transporta para uma floresta da mente.”</p>
+                  </blockquote>
             <!--Lista de Atributos dos animais-->
             <ul class="atributos">
                 <li>Surgiu: 12.000 anos</li>
